@@ -1,3 +1,15 @@
+2011-04-18  Oliver Hunt  <oliver@apple.com>
+
+        Reviewed by Gavin Barraclough.
+
+        Remove DeprecatedPtr
+        https://bugs.webkit.org/show_bug.cgi?id=58718
+
+        As simple as it sounds.
+
+        * runtime/JSValue.h:
+        * runtime/WriteBarrier.h:
+
 2011-04-17  Cameron Zwarich  <zwarich@apple.com>
 
         Reviewed by Dan Bernstein.
